k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smu-app
spec:
  selector:
    app: smu
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  type: NodePort
